--- a/article-office-moving.html
+++ b/article-office-moving.html
@@ -6,13 +6,13 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <!-- Enhanced Title Tag with Primary Keyword First -->
-  <title>نقل المكاتب في حولي | حور - نقل عفش حولي الكويت</title>
+  <title>إدارة نقل الشركات بذكاء | حور - نقل عفش حولي الكويت</title>
   
   <!-- Enhanced Meta Description -->
-  <meta name="description" content="كيف تنقل مكتبك في حولي بدون توقف العمل وخسارة الزبائن - دليل شامل لنقل المكاتب باحترافية في منطقة حولي">
+  <meta name="description" content="استراتيجيات ذكية لنقل الشركات والمكاتب في حولي مع الحفاظ على استمرارية العمل - دليل شامل لإدارة النقل المؤسسي">
   
   <!-- Expanded Keywords List -->
-  <meta name="keywords" content="نقل مكاتب حولي, نقل مكتب حولي, نقل شركات حولي, نقل عفش مكاتب حولي, نقل أثاث مكتبي حولي, نقل عفش حولي الكويت, شركة نقل مكاتب حولي">
+  <meta name="keywords" content="إدارة نقل الشركات حولي, نقل مؤسسات حولي, نقل مكاتب ذكي حولي, نقل عفش شركات حولي, نقل أثاث مؤسسي حولي, نقل عفش حولي الكويت, شركة نقل مؤسسات حولي">
   
   <!-- Canonical URL -->
   <link rel="canonical" href="https://naqlafsha-hoor.com/article-office-moving.html" />
@@ -22,8 +22,8 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Open Graph / Social Media Meta Tags -->
-  <meta property="og:title" content="نقل المكاتب باحترافية | حور">
-  <meta property="og:description" content="كيف تنقل مكتبك بدون توقف العمل وخسارة الزبائن - دليل شامل لنقل المكاتب باحترافية">
+  <meta property="og:title" content="إدارة نقل الشركات بذكاء | حور">
+  <meta property="og:description" content="استراتيجيات ذكية لنقل الشركات والمكاتب مع الحفاظ على استمرارية العمل - دليل شامل لإدارة النقل المؤسسي">
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://naqlafsha-hoor.com/article-office-moving.html">
   <meta property="og:image" content="assets/img/logo.png">
@@ -31,8 +31,8 @@
 
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="نقل المكاتب باحترافية | حور">
-  <meta name="twitter:description" content="كيف تنقل مكتبك بدون توقف العمل وخسارة الزبائن - دليل شامل لنقل المكاتب باحترافية">
+  <meta name="twitter:title" content="إدارة نقل الشركات بذكاء | حور">
+  <meta name="twitter:description" content="استراتيجيات ذكية لنقل الشركات والمكاتب مع الحفاظ على استمرارية العمل - دليل شامل لإدارة النقل المؤسسي">
   <meta name="twitter:image" content="assets/img/logo.png">
 
   <!-- Geo and Business Meta Tags (for local SEO) -->
@@ -45,8 +45,8 @@
     {
       "@context": "https://schema.org",
       "@type": "Article",
-      "headline": "نقل المكاتب باحترافية",
-      "description": "كيف تنقل مكتبك بدون توقف العمل وخسارة الزبائن - دليل شامل لنقل المكاتب باحترافية",
+      "headline": "إدارة نقل الشركات بذكاء",
+      "description": "استراتيجيات ذكية لنقل الشركات والمكاتب مع الحفاظ على استمرارية العمل - دليل شامل لإدارة النقل المؤسسي",
       "image": "assets/img/logo.png",
       "author": {
         "@type": "Organization",
@@ -132,10 +132,10 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h1 class="article-title">نقل المكاتب باحترافية</h1>
+            <h1 class="article-title">إدارة نقل الشركات بذكاء</h1>
             <div class="article-meta">
               <span><i class="bi bi-calendar"></i> 5 سبتمبر 2023</span>
-              <span><i class="bi bi-folder"></i> نقل المكاتب</span>
+              <span><i class="bi bi-folder"></i> إدارة النقل المؤسسي</span>
             </div>
           </div>
         </div>
@@ -164,38 +164,38 @@
 
             <!-- Article Text Content -->
             <div class="article-text-content">
-              <p>نقل المكاتب يتطلب تخطيطاً دقيقاً وتنفيذاً احترافياً. إليك دليل شامل:</p>
+              <p>نقل الشركات والمكاتب يتطلب استراتيجية ذكية وتنفيذاً متقناً. إليك دليل شامل لإدارة النقل المؤسسي:</p>
               
-              <h2>1. التخطيط المسبق</h2>
-              <p>خطوات أساسية قبل النقل:</p>
+              <h2>1. الاستراتيجية الذكية</h2>
+              <p>مبادئ أساسية لإدارة النقل المؤسسي:</p>
               <ul>
-                <li>تحديد موعد مناسب</li>
-                <li>إعداد قائمة جرد</li>
-                <li>تخطيط المساحة الجديدة</li>
+                <li>تحليل احتياجات العمل</li>
+                <li>وضع خطة زمنية مرنة</li>
+                <li>تقييم المخاطر المحتملة</li>
               </ul>
 
-              <h2>2. تنفيذ النقل</h2>
-              <p>نصائح للتنفيذ:</p>
+              <h2>2. التنفيذ المتقن</h2>
+              <p>تقنيات متقدمة للتنفيذ:</p>
               <ul>
-                <li>تقسيم العمل لفريقين</li>
-                <li>استخدام معدات متخصصة</li>
-                <li>حماية الأجهزة الحساسة</li>
+                <li>تنسيق متعدد المستويات</li>
+                <li>استخدام تقنيات حديثة</li>
+                <li>حماية البيانات والمعلومات</li>
               </ul>
 
-              <h2>3. حماية البيانات</h2>
-              <p>قم بنقل الملفات المهمة بنفسك وتأكد من عمل نسخ احتياطية لجميع البيانات.</p>
+              <h2>3. الأمان السيبراني</h2>
+              <p>تأمين شامل للبيانات والمعلومات الحساسة مع استخدام أنظمة تشفير متقدمة ونسخ احتياطية آمنة.</p>
               
-              <h2>4. تجهيز المكتب الجديد</h2>
-              <p>تأكد من تجهيز المكتب الجديد بالكامل قبل نقل الأثاث والأجهزة.</p>
+              <h2>4. التكامل الذكي</h2>
+              <p>تجهيز متكامل للمساحة الجديدة مع تركيب أنظمة الاتصالات والشبكات قبل نقل المعدات.</p>
             </div>
 
             <!-- Article Tags -->
             <div class="article-tags">
-              <span>نقل مكاتب</span>
-              <span>نقل شركات</span>
+              <span>إدارة النقل المؤسسي</span>
+              <span>نقل ذكي</span>
               <span>الكويت</span>
-              <span>احترافية</span>
-              <span>أثاث مكتبي</span>
+              <span>استراتيجية</span>
+              <span>أمان البيانات</span>
             </div>
 
             <!-- Share Buttons -->
@@ -222,8 +222,8 @@
                   <div class="related-article-card">
                     <img src="assets/img/articles/fast-1.jpg" alt="أسرار النقل السريع للعفش - نصائح من حور">
                     <div class="card-body">
-                      <h4>أسرار النقل السريع</h4>
-                      <p>تعرف على أفضل الطرق لنقل عفشك بسرعة وأمان</p>
+                      <h4>تقنيات النقل المتقدمة</h4>
+                      <p>اكتشف أحدث الطرق لنقل أثاثك بكفاءة عالية وأمان تام</p>
                       <a href="article-speed-moving.html" class="read-more">
                         اقرأ المزيد <i class="bi bi-arrow-left"></i>
                       </a>
@@ -234,8 +234,8 @@
                   <div class="related-article-card">
                     <img src="assets/img/articles/secure-1.jpg" alt="دليل التغليف الآمن للأثاث - نصائح من خبراء حور">
                     <div class="card-body">
-                      <h4>دليل التغليف الآمن</h4>
-                      <p>أفضل الطرق لتغليف أثاثك وحمايته أثناء النقل</p>
+                      <h4>حماية الأثاث المتطورة</h4>
+                      <p>تقنيات حديثة لتغليف وحماية أثاثك من التلف</p>
                       <a href="article-packing-guide.html" class="read-more">
                         اقرأ المزيد <i class="bi bi-arrow-left"></i>
                       </a>
@@ -246,8 +246,8 @@
                   <div class="related-article-card">
                     <img src="assets/img/articles/seazon-1.jpg" alt="النقل الموسمي في الكويت - أفضل الأوقات لنقل العفش">
                     <div class="card-body">
-                      <h4>النقل الموسمي</h4>
-                      <p>أفضل الأوقات لنقل عفشك في الكويت</p>
+                      <h4>التوقيت الأمثل</h4>
+                      <p>استراتيجيات اختيار الوقت المناسب لنقل أثاثك</p>
                       <a href="article-seasonal-moving.html" class="read-more">
                         اقرأ المزيد <i class="bi bi-arrow-left"></i>
                       </a>
