--- a/article-packing-guide.html
+++ b/article-packing-guide.html
@@ -6,13 +6,13 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <!-- Enhanced Title Tag with Primary Keyword First -->
-  <title>دليل التغليف الآمن في حولي | حور - نقل عفش حولي الكويت</title>
+  <title>فن الحماية المتقنة للأثاث | حور - نقل عفش حولي الكويت</title>
   
   <!-- Enhanced Meta Description -->
-  <meta name="description" content="دليل شامل للتغليف الآمن للأثاث في حولي - أفضل الطرق لتغليف مختلف أنواع الأثاث والأجهزة الكهربائية لحمايتها أثناء النقل في منطقة حولي">
+  <meta name="description" content="تقنيات متطورة لحماية الأثاث في حولي - أساليب مبتكرة لتغليف مختلف أنواع الأثاث والأجهزة الكهربائية مع ضمان الحماية الكاملة أثناء النقل">
   
   <!-- Expanded Keywords List -->
-  <meta name="keywords" content="تغليف الأثاث حولي, تغليف العفش حولي, تغليف آمن حولي, نقل أثاث آمن حولي, تغليف الأجهزة الكهربائية حولي, نقل عفش حولي الكويت, شركة نقل عفش حولي, نصائح التغليف حولي">
+  <meta name="keywords" content="حماية الأثاث حولي, تقنيات التغليف حولي, حماية متقنة حولي, نقل أثاث محمي حولي, حماية الأجهزة الكهربائية حولي, نقل عفش حولي الكويت, شركة نقل عفش حولي, فن التغليف حولي">
   
   <!-- Canonical URL -->
   <link rel="canonical" href="https://naqlafsha-hoor.com/article-packing-guide.html" />
@@ -22,8 +22,8 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Open Graph / Social Media Meta Tags -->
-  <meta property="og:title" content="دليل التغليف الآمن للأثاث | حور">
-  <meta property="og:description" content="دليل شامل للتغليف الآمن للأثاث - أفضل الطرق لتغليف مختلف أنواع الأثاث والأجهزة الكهربائية لحمايتها أثناء النقل">
+  <meta property="og:title" content="فن الحماية المتقنة للأثاث | حور">
+  <meta property="og:description" content="تقنيات متطورة لحماية الأثاث - أساليب مبتكرة لتغليف مختلف أنواع الأثاث والأجهزة الكهربائية مع ضمان الحماية الكاملة">
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://naqlafsha-hoor.com/article-packing-guide.html">
   <meta property="og:image" content="assets/img/logo.png">
@@ -31,8 +31,8 @@
 
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="دليل التغليف الآمن للأثاث | حور">
-  <meta name="twitter:description" content="دليل شامل للتغليف الآمن للأثاث - أفضل الطرق لتغليف مختلف أنواع الأثاث والأجهزة الكهربائية لحمايتها أثناء النقل">
+  <meta name="twitter:title" content="فن الحماية المتقنة للأثاث | حور">
+  <meta name="twitter:description" content="تقنيات متطورة لحماية الأثاث - أساليب مبتكرة لتغليف مختلف أنواع الأثاث والأجهزة الكهربائية مع ضمان الحماية الكاملة">
   <meta name="twitter:image" content="assets/img/logo.png">
 
   <!-- Geo and Business Meta Tags (for local SEO) -->
@@ -45,8 +45,8 @@
     {
       "@context": "https://schema.org",
       "@type": "Article",
-      "headline": "دليل التغليف الآمن للأثاث",
-      "description": "دليل شامل للتغليف الآمن للأثاث - أفضل الطرق لتغليف مختلف أنواع الأثاث والأجهزة الكهربائية لحمايتها أثناء النقل",
+      "headline": "فن الحماية المتقنة للأثاث",
+      "description": "تقنيات متطورة لحماية الأثاث - أساليب مبتكرة لتغليف مختلف أنواع الأثاث والأجهزة الكهربائية مع ضمان الحماية الكاملة",
       "image": "assets/img/logo.png",
       "author": {
         "@type": "Organization",
@@ -132,10 +132,10 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h1 class="article-title">دليل التغليف الآمن للأثاث</h1>
+            <h1 class="article-title">فن الحماية المتقنة للأثاث</h1>
             <div class="article-meta">
               <span><i class="bi bi-calendar"></i> 2 يوليو 2023</span>
-              <span><i class="bi bi-folder"></i> تغليف العفش</span>
+              <span><i class="bi bi-folder"></i> فن الحماية</span>
             </div>
           </div>
         </div>
@@ -165,44 +165,44 @@
 
             <!-- Article Text Content -->
             <div class="article-text-content">
-              <p>التغليف الآمن للأثاث هو خطوة حيوية في عملية النقل. إليك دليل شامل للتغليف:</p>
+              <p>حماية الأثاث فن يتطلب إتقاناً ومهارة عالية. إليك دليل شامل لتقنيات الحماية المتطورة:</p>
               
-              <h2>1. الأدوات الأساسية</h2>
-              <p>تحتاج إلى:</p>
+              <h2>1. المعدات المتطورة</h2>
+              <p>أدوات عالية الجودة للحماية المثلى:</p>
               <ul>
-                <li>كراتين متينة</li>
-                <li>بلاستيك فقاعات</li>
-                <li>شريط لاصق</li>
-                <li>أكياس بلاستيكية</li>
+                <li>كراتين مقاومة للماء</li>
+                <li>مواد عازلة متقدمة</li>
+                <li>أشرطة لاصقة قوية</li>
+                <li>أغلفة واقية متخصصة</li>
               </ul>
 
-              <h2>2. تقنيات التغليف</h2>
-              <p>لكل نوع من الأثاث طريقة تغليف خاصة:</p>
+              <h2>2. تقنيات الحماية المتخصصة</h2>
+              <p>أساليب مبتكرة لكل نوع من الأثاث:</p>
               <ul>
-                <li>الأثاث الخشبي: تغليف الزوايا والسطوح</li>
-                <li>الأجهزة الكهربائية: تغليف خاص مع الحفاظ على الأجزاء الحساسة</li>
-                <li>الزجاج: تغليف مزدوج مع وضع علامات واضحة</li>
+                <li>الأثاث الخشبي: حماية ثلاثية الطبقات</li>
+                <li>الأجهزة الكهربائية: عزل كامل مع حماية من الصدمات</li>
+                <li>الزجاج: نظام حماية متعدد المستويات</li>
               </ul>
 
-              <h2>3. خطوات التغليف المنظم</h2>
-              <p>ابدأ بالأشياء الصغيرة ثم انتقل إلى القطع الكبيرة. تأكد من تغليف الزوايا والحواف بشكل جيد.</p>
+              <h2>3. منهجية الحماية المنظمة</h2>
+              <p>نظام متدرج يبدأ بالعناصر الحساسة وينتهي بالقطع الكبيرة. حماية شاملة للزوايا والحواف مع ضمان الاستقرار.</p>
               
-              <h2>4. نصائح مهمة</h2>
+              <h2>4. معايير الجودة العالية</h2>
               <ul>
-                <li>استخدم كراتين قوية ومتينة</li>
-                <li>ضع علامات واضحة على كل صندوق</li>
-                <li>احتفظ بالمفاتيح والأجزاء الصغيرة في مكان آمن</li>
-                <li>صور الأثاث قبل التغليف للتوثيق</li>
+                <li>استخدام مواد مقاومة للعوامل الخارجية</li>
+                <li>نظام تصنيف متقدم لكل صندوق</li>
+                <li>حفظ آمن للمكونات الصغيرة والحساسة</li>
+                <li>توثيق شامل بالصور والوصف التفصيلي</li>
               </ul>
             </div>
 
             <!-- Article Tags -->
             <div class="article-tags">
-              <span>تغليف الأثاث</span>
-              <span>نقل آمن</span>
+              <span>فن الحماية</span>
+              <span>تقنيات متطورة</span>
               <span>الكويت</span>
-              <span>نصائح</span>
-              <span>حماية العفش</span>
+              <span>إتقان</span>
+              <span>حماية متقنة</span>
             </div>
 
             <!-- Share Buttons -->
@@ -229,8 +229,8 @@
                   <div class="related-article-card">
                     <img src="assets/img/articles/fast-1.jpg" alt="أسرار النقل السريع للعفش - نصائح من حور">
                     <div class="card-body">
-                      <h4>أسرار النقل السريع</h4>
-                      <p>تعرف على أفضل الطرق لنقل عفشك بسرعة وأمان</p>
+                      <h4>تقنيات النقل المتقدمة</h4>
+                      <p>اكتشف أحدث الطرق لنقل أثاثك بكفاءة عالية وأمان تام</p>
                       <a href="article-speed-moving.html" class="read-more">
                         اقرأ المزيد <i class="bi bi-arrow-left"></i>
                       </a>
@@ -241,8 +241,8 @@
                   <div class="related-article-card">
                     <img src="assets/img/articles/seazon-1.jpg" alt="النقل الموسمي في الكويت - أفضل الأوقات لنقل العفش">
                     <div class="card-body">
-                      <h4>النقل الموسمي</h4>
-                      <p>أفضل الأوقات لنقل عفشك في الكويت</p>
+                      <h4>التوقيت الأمثل</h4>
+                      <p>استراتيجيات اختيار الوقت المناسب لنقل أثاثك</p>
                       <a href="article-seasonal-moving.html" class="read-more">
                         اقرأ المزيد <i class="bi bi-arrow-left"></i>
                       </a>
@@ -253,8 +253,8 @@
                   <div class="related-article-card">
                     <img src="assets/img/articles/naql-1.jpg" alt="نقل المكاتب باحترافية - خدمات حور للشركات">
                     <div class="card-body">
-                      <h4>نقل المكاتب باحترافية</h4>
-                      <p>كيف تنقل مكتبك بدون توقف العمل</p>
+                      <h4>إدارة نقل الشركات بذكاء</h4>
+                      <p>استراتيجيات ذكية لنقل مكتبك مع الحفاظ على استمرارية العمل</p>
                       <a href="article-office-moving.html" class="read-more">
                         اقرأ المزيد <i class="bi bi-arrow-left"></i>
                       </a>
