--- a/article-seasonal-moving.html
+++ b/article-seasonal-moving.html
@@ -6,13 +6,13 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <!-- Enhanced Title Tag with Primary Keyword First -->
-  <title>النقل الموسمي في حولي | حور - نقل عفش حولي الكويت</title>
+  <title>استراتيجيات النقل الذكية حسب الطقس | حور - نقل عفش حولي الكويت</title>
   
   <!-- Enhanced Meta Description -->
-  <meta name="description" content="توقيتات مثالية لتجنب الحرارة والازدحام أثناء نقل الأثاث في حولي - أفضل أوقات نقل العفش في منطقة حولي">
+  <meta name="description" content="خطط ذكية لتجنب التحديات المناخية أثناء نقل الأثاث في حولي - استراتيجيات متقدمة لنقل العفش حسب الظروف الجوية">
   
   <!-- Expanded Keywords List -->
-  <meta name="keywords" content="نقل موسمي حولي, نقل عفش موسمي حولي, أفضل أوقات النقل حولي, نقل عفش حولي الكويت, نقل أثاث موسمي حولي, نصائح موسمية حولي, نقل عفش صيفي حولي">
+  <meta name="keywords" content="نقل ذكي حولي, نقل عفش ذكي حولي, استراتيجيات النقل حولي, نقل عفش حولي الكويت, نقل أثاث ذكي حولي, نصائح مناخية حولي, نقل عفش متكيف حولي">
   
   <!-- Canonical URL -->
   <link rel="canonical" href="https://naqlafsha-hoor.com/article-seasonal-moving.html" />
@@ -22,8 +22,8 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Open Graph / Social Media Meta Tags -->
-  <meta property="og:title" content="النقل الموسمي في الكويت | حور">
-  <meta property="og:description" content="توقيتات مثالية لتجنب الحرارة والازدحام أثناء نقل الأثاث - أفضل أوقات نقل العفش في الكويت">
+  <meta property="og:title" content="استراتيجيات النقل الذكية حسب الطقس | حور">
+  <meta property="og:description" content="خطط ذكية لتجنب التحديات المناخية أثناء نقل الأثاث - استراتيجيات متقدمة لنقل العفش حسب الظروف الجوية">
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://naqlafsha-hoor.com/article-seasonal-moving.html">
   <meta property="og:image" content="assets/img/logo.png">
@@ -31,8 +31,8 @@
 
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="النقل الموسمي في الكويت | حور">
-  <meta name="twitter:description" content="توقيتات مثالية لتجنب الحرارة والازدحام أثناء نقل الأثاث - أفضل أوقات نقل العفش في الكويت">
+  <meta name="twitter:title" content="استراتيجيات النقل الذكية حسب الطقس | حور">
+  <meta name="twitter:description" content="خطط ذكية لتجنب التحديات المناخية أثناء نقل الأثاث - استراتيجيات متقدمة لنقل العفش حسب الظروف الجوية">
   <meta name="twitter:image" content="assets/img/logo.png">
 
   <!-- Geo and Business Meta Tags (for local SEO) -->
@@ -45,8 +45,8 @@
     {
       "@context": "https://schema.org",
       "@type": "Article",
-      "headline": "النقل الموسمي في الكويت",
-      "description": "توقيتات مثالية لتجنب الحرارة والازدحام أثناء نقل الأثاث - أفضل أوقات نقل العفش في الكويت",
+      "headline": "استراتيجيات النقل الذكية حسب الطقس",
+      "description": "خطط ذكية لتجنب التحديات المناخية أثناء نقل الأثاث - استراتيجيات متقدمة لنقل العفش حسب الظروف الجوية",
       "image": "assets/img/logo.png",
       "author": {
         "@type": "Organization",
@@ -132,10 +132,10 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h1 class="article-title">النقل الموسمي في الكويت</h1>
+            <h1 class="article-title">استراتيجيات النقل الذكية حسب الطقس</h1>
             <div class="article-meta">
               <span><i class="bi bi-calendar"></i> 20 أغسطس 2023</span>
-              <span><i class="bi bi-folder"></i> نصائح موسمية</span>
+              <span><i class="bi bi-folder"></i> استراتيجيات ذكية</span>
             </div>
           </div>
         </div>
@@ -165,43 +165,43 @@
 
             <!-- Article Text Content -->
             <div class="article-text-content">
-              <p>النقل الموسمي في الكويت يتطلب تخطيطاً خاصاً نظراً للظروف المناخية. إليك أهم النصائح:</p>
+              <p>النقل الذكي في الكويت يتطلب استراتيجية متكاملة تتكيف مع الظروف المناخية. إليك أهم الاستراتيجيات:</p>
               
-              <h2>1. اختيار التوقيت المناسب</h2>
-              <p>أفضل أوقات النقل في الكويت:</p>
+              <h2>1. التخطيط الذكي للوقت</h2>
+              <p>استراتيجيات متقدمة لاختيار التوقيت الأمثل:</p>
               <ul>
-                <li>الصباح الباكر</li>
-                <li>فترة المساء</li>
-                <li>تجنب ساعات الذروة</li>
+                <li>تحليل أنماط الطقس</li>
+                <li>تجنب فترات الازدحام</li>
+                <li>الاستفادة من الأوقات المثلى</li>
               </ul>
 
-              <h2>2. الاستعداد للطقس</h2>
-              <p>يجب مراعاة:</p>
+              <h2>2. التكيف مع الظروف المناخية</h2>
+              <p>استراتيجيات متطورة للتعامل مع:</p>
               <ul>
-                <li>درجات الحرارة العالية</li>
-                <li>الرطوبة</li>
-                <li>العواصف الرملية</li>
+                <li>الموجات الحرارية الشديدة</li>
+                <li>مستويات الرطوبة العالية</li>
+                <li>العواصف الرملية والغبار</li>
               </ul>
 
-              <h2>3. نصائح للنقل في الصيف</h2>
+              <h2>3. استراتيجيات النقل الصيفي المتقدمة</h2>
               <ul>
-                <li>اختر الصباح الباكر</li>
-                <li>استخدم سيارات مكيفة</li>
-                <li>احمِ الأثاث من أشعة الشمس</li>
-                <li>اشرب الماء بانتظام</li>
+                <li>تطبيق نظام التبريد الذكي</li>
+                <li>استخدام تقنيات الحماية من الحرارة</li>
+                <li>نظام مراقبة درجة الحرارة</li>
+                <li>برنامج الترطيب المتقدم</li>
               </ul>
 
-              <h2>4. النقل في الشتاء</h2>
-              <p>تجنب الأيام الممطرة واختر الأيام المشمسة للنقل. تأكد من تغليف الأثاث بشكل جيد ضد الرطوبة.</p>
+              <h2>4. استراتيجيات النقل الشتوي الذكية</h2>
+              <p>نظام متكامل للتعامل مع الظروف الشتوية مع استخدام تقنيات الحماية المتقدمة ضد الرطوبة والتقلبات الجوية.</p>
             </div>
 
             <!-- Article Tags -->
             <div class="article-tags">
-              <span>نقل موسمي</span>
-              <span>أفضل أوقات</span>
+              <span>نقل ذكي</span>
+              <span>استراتيجيات متقدمة</span>
               <span>الكويت</span>
-              <span>نصائح</span>
-              <span>الطقس</span>
+              <span>تكيف</span>
+              <span>الظروف المناخية</span>
             </div>
 
             <!-- Share Buttons -->
@@ -228,8 +228,8 @@
                   <div class="related-article-card">
                     <img src="assets/img/articles/fast-1.jpg" alt="أسرار النقل السريع للعفش - نصائح من حور">
                     <div class="card-body">
-                      <h4>أسرار النقل السريع</h4>
-                      <p>تعرف على أفضل الطرق لنقل عفشك بسرعة وأمان</p>
+                      <h4>تقنيات النقل المتقدمة</h4>
+                      <p>اكتشف أحدث الطرق لنقل أثاثك بكفاءة عالية وأمان تام</p>
                       <a href="article-speed-moving.html" class="read-more">
                         اقرأ المزيد <i class="bi bi-arrow-left"></i>
                       </a>
@@ -240,8 +240,8 @@
                   <div class="related-article-card">
                     <img src="assets/img/articles/secure-1.jpg" alt="دليل التغليف الآمن للأثاث - نصائح من خبراء حور">
                     <div class="card-body">
-                      <h4>دليل التغليف الآمن</h4>
-                      <p>أفضل الطرق لتغليف أثاثك وحمايته أثناء النقل</p>
+                      <h4>فن الحماية المتقنة</h4>
+                      <p>تقنيات حديثة لتغليف وحماية أثاثك من التلف</p>
                       <a href="article-packing-guide.html" class="read-more">
                         اقرأ المزيد <i class="bi bi-arrow-left"></i>
                       </a>
@@ -252,8 +252,8 @@
                   <div class="related-article-card">
                     <img src="assets/img/articles/naql-1.jpg" alt="نقل المكاتب باحترافية - خدمات حور للشركات">
                     <div class="card-body">
-                      <h4>نقل المكاتب باحترافية</h4>
-                      <p>كيف تنقل مكتبك بدون توقف العمل</p>
+                      <h4>إدارة نقل الشركات بذكاء</h4>
+                      <p>استراتيجيات ذكية لنقل مكتبك مع الحفاظ على استمرارية العمل</p>
                       <a href="article-office-moving.html" class="read-more">
                         اقرأ المزيد <i class="bi bi-arrow-left"></i>
                       </a>
