--- a/article-speed-moving.html
+++ b/article-speed-moving.html
@@ -6,13 +6,13 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <!-- Enhanced Title Tag with Primary Keyword First -->
-  <title>النقل السريع للعفش في حولي | حور - نقل عفش حولي الكويت</title>
+  <title>تقنيات النقل المتطورة والكفؤة | حور - نقل عفش حولي الكويت</title>
   
   <!-- Enhanced Meta Description -->
-  <meta name="description" content="تعرف على كيفية نقل أثاثك في حولي في وقت قياسي مع الحفاظ على سلامته - نصائح عملية لنقل سريع وآمن في منطقة حولي">
+  <meta name="description" content="اكتشف أحدث تقنيات نقل الأثاث في حولي بكفاءة عالية وجودة متميزة - استراتيجيات متطورة لنقل متقن وآمن في منطقة حولي">
   
   <!-- Expanded Keywords List -->
-  <meta name="keywords" content="نقل سريع حولي, نقل عفش سريع حولي, نقل أثاث سريع حولي, نقل عفش حولي الكويت, شركة نقل عفش حولي, نصائح النقل السريع حولي, نقل آمن حولي">
+  <meta name="keywords" content="نقل متطور حولي, نقل عفش متطور حولي, نقل أثاث كفؤ حولي, نقل عفش حولي الكويت, شركة نقل عفش حولي, تقنيات النقل المتطورة حولي, نقل متقن حولي">
   
   <!-- Canonical URL -->
   <link rel="canonical" href="https://naqlafsha-hoor.com/article-speed-moving.html" />
@@ -22,8 +22,8 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Open Graph / Social Media Meta Tags -->
-  <meta property="og:title" content="أسرار النقل السريع للعفش | حور">
-  <meta property="og:description" content="تعرف على كيفية نقل أثاثك في وقت قياسي مع الحفاظ على سلامته - نصائح عملية لنقل سريع وآمن">
+  <meta property="og:title" content="تقنيات النقل المتطورة والكفؤة | حور">
+  <meta property="og:description" content="اكتشف أحدث تقنيات نقل الأثاث بكفاءة عالية وجودة متميزة - استراتيجيات متطورة لنقل متقن وآمن">
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://naqlafsha-hoor.com/article-speed-moving.html">
   <meta property="og:image" content="assets/img/logo.png">
@@ -31,8 +31,8 @@
 
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="أسرار النقل السريع للعفش | حور">
-  <meta name="twitter:description" content="تعرف على كيفية نقل أثاثك في وقت قياسي مع الحفاظ على سلامته - نصائح عملية لنقل سريع وآمن">
+  <meta name="twitter:title" content="تقنيات النقل المتطورة والكفؤة | حور">
+  <meta name="twitter:description" content="اكتشف أحدث تقنيات نقل الأثاث بكفاءة عالية وجودة متميزة - استراتيجيات متطورة لنقل متقن وآمن">
   <meta name="twitter:image" content="assets/img/logo.png">
 
   <!-- Geo and Business Meta Tags (for local SEO) -->
@@ -45,8 +45,8 @@
     {
       "@context": "https://schema.org",
       "@type": "Article",
-      "headline": "أسرار النقل السريع للعفش",
-      "description": "تعرف على كيفية نقل أثاثك في وقت قياسي مع الحفاظ على سلامته - نصائح عملية لنقل سريع وآمن",
+      "headline": "تقنيات النقل المتطورة والكفؤة",
+      "description": "اكتشف أحدث تقنيات نقل الأثاث بكفاءة عالية وجودة متميزة - استراتيجيات متطورة لنقل متقن وآمن",
       "image": "assets/img/logo.png",
       "author": {
         "@type": "Organization",
@@ -132,10 +132,10 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h1 class="article-title">أسرار النقل السريع للعفش</h1>
+            <h1 class="article-title">تقنيات النقل المتطورة والكفؤة</h1>
             <div class="article-meta">
               <span><i class="bi bi-calendar"></i> 15 يونيو 2023</span>
-              <span><i class="bi bi-folder"></i> نصائح النقل</span>
+              <span><i class="bi bi-folder"></i> تقنيات متطورة</span>
             </div>
           </div>
         </div>
@@ -164,38 +164,38 @@
 
             <!-- Article Text Content -->
             <div class="article-text-content">
-              <p>نقل العفش بسرعة وكفاءة يتطلب خطة محكمة وأدوات متخصصة. في هذا المقال، نشارك معكم أهم النصائح لنقل سريع وآمن:</p>
+              <p>نقل الأثاث بكفاءة عالية وجودة متميزة يتطلب تقنيات متطورة وأدوات متخصصة. في هذا المقال، نكشف لكم أحدث الاستراتيجيات لنقل متقن وآمن:</p>
               
-              <h2>1. التخطيط المسبق</h2>
-              <p>قبل بدء عملية النقل، يجب وضع خطة تفصيلية تشمل:</p>
+              <h2>1. الاستراتيجية المتقدمة</h2>
+              <p>قبل بدء عملية النقل، يجب وضع استراتيجية شاملة تشمل:</p>
               <ul>
-                <li>تحديد موعد النقل المناسب</li>
-                <li>تقسيم الأثاث حسب الغرف</li>
-                <li>تجهيز الأدوات اللازمة</li>
+                <li>تحليل متطلبات النقل</li>
+                <li>تصنيف الأثاث حسب الأولوية</li>
+                <li>تجهيز المعدات المتطورة</li>
               </ul>
 
-              <h2>2. التغليف المنظم</h2>
-              <p>التغليف الجيد هو مفتاح النقل السريع. نستخدم:</p>
+              <h2>2. نظام الحماية المتطور</h2>
+              <p>الحماية المتقدمة هي أساس النقل الكفؤ. نستخدم:</p>
               <ul>
-                <li>كراتين قوية</li>
-                <li>بلاستيك فقاعات</li>
-                <li>شريط لاصق عالي الجودة</li>
+                <li>مواد مقاومة متطورة</li>
+                <li>تقنيات عزل متقدمة</li>
+                <li>أنظمة تثبيت ذكية</li>
               </ul>
 
-              <h2>3. الفك والتركيب</h2>
-              <p>فك الأثاث بشكل صحيح يسهل عملية النقل ويحمي القطع من التلف.</p>
+              <h2>3. تقنيات الفك والتركيب المتطورة</h2>
+              <p>استخدام تقنيات متقدمة في الفك والتركيب يضمن كفاءة النقل وحماية القطع من التلف.</p>
               
-              <h2>4. اختيار الوقت المناسب</h2>
-              <p>تأكد من اختيار الوقت المناسب للنقل وتجنب ساعات الذروة. استخدم سيارات مجهزة وذات حجم مناسب.</p>
+              <h2>4. التوقيت الأمثل والمركبات المتطورة</h2>
+              <p>اختيار التوقيت الأمثل مع استخدام مركبات مجهزة بأحدث التقنيات وذات سعة مناسبة لضمان النقل الكفؤ.</p>
             </div>
 
             <!-- Article Tags -->
             <div class="article-tags">
-              <span>نقل سريع</span>
-              <span>نقل آمن</span>
+              <span>نقل متطور</span>
+              <span>نقل كفؤ</span>
               <span>الكويت</span>
-              <span>نصائح</span>
-              <span>فك وتركيب</span>
+              <span>تقنيات</span>
+              <span>فك وتركيب متطور</span>
             </div>
 
             <!-- Share Buttons -->
@@ -222,8 +222,8 @@
                   <div class="related-article-card">
                     <img src="assets/img/articles/secure-1.jpg" alt="دليل التغليف الآمن للأثاث - نصائح من خبراء حور">
                     <div class="card-body">
-                      <h4>دليل التغليف الآمن</h4>
-                      <p>أفضل الطرق لتغليف أثاثك وحمايته أثناء النقل</p>
+                      <h4>فن الحماية المتقنة</h4>
+                      <p>تقنيات حديثة لتغليف وحماية أثاثك من التلف</p>
                       <a href="article-packing-guide.html" class="read-more">
                         اقرأ المزيد <i class="bi bi-arrow-left"></i>
                       </a>
@@ -234,8 +234,8 @@
                   <div class="related-article-card">
                     <img src="assets/img/articles/seazon-1.jpg" alt="النقل الموسمي في الكويت - أفضل الأوقات لنقل العفش">
                     <div class="card-body">
-                      <h4>النقل الموسمي</h4>
-                      <p>أفضل الأوقات لنقل عفشك في الكويت</p>
+                      <h4>استراتيجيات النقل الذكية</h4>
+                      <p>خطط ذكية لتجنب التحديات المناخية أثناء نقل الأثاث</p>
                       <a href="article-seasonal-moving.html" class="read-more">
                         اقرأ المزيد <i class="bi bi-arrow-left"></i>
                       </a>
@@ -246,8 +246,8 @@
                   <div class="related-article-card">
                     <img src="assets/img/articles/naql-1.jpg" alt="نقل المكاتب باحترافية - خدمات حور للشركات">
                     <div class="card-body">
-                      <h4>نقل المكاتب باحترافية</h4>
-                      <p>كيف تنقل مكتبك بدون توقف العمل</p>
+                      <h4>إدارة نقل الشركات بذكاء</h4>
+                      <p>استراتيجيات ذكية لنقل مكتبك مع الحفاظ على استمرارية العمل</p>
                       <a href="article-office-moving.html" class="read-more">
                         اقرأ المزيد <i class="bi bi-arrow-left"></i>
                       </a>
