--- a/article-view.html
+++ b/article-view.html
@@ -6,13 +6,13 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <!-- Enhanced Title Tag with Primary Keyword First -->
-  <title>مقالات نقل عفش في الكويت | حور - نقل عفش الكويت</title>
+  <title>مكتبة المعرفة المتخصصة في النقل | حور - نقل عفش الكويت</title>
   
   <!-- Enhanced Meta Description -->
-  <meta name="description" content="مقالات نقل عفش في الكويت - تعرف على كيفية نقل أثاثك في وقت قياسي مع الحفاظ على سلامته - نصائح عملية لنقل سريع وآمن">
+  <meta name="description" content="مكتبة شاملة من المقالات المتخصصة في نقل الأثاث في الكويت - اكتشف أحدث التقنيات والاستراتيجيات لنقل متقن وآمن">
   
   <!-- Expanded Keywords List -->
-  <meta name="keywords" content="نقل سريع, نقل عفش سريع, نقل أثاث سريع, نقل عفش الكويت, شركة نقل عفش, نصائح النقل السريع, نقل آمن">
+  <meta name="keywords" content="مكتبة النقل, مقالات نقل متخصصة, نقل عفش متطور, نقل عفش الكويت, شركة نقل عفش, تقنيات النقل المتطورة, نقل متقن">
   
   <!-- Canonical URL -->
   <link rel="canonical" href="https://naqlafsha-hoor.com/article-speed-moving.html" />
@@ -22,8 +22,8 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Open Graph / Social Media Meta Tags -->
-  <meta property="og:title" content="أسرار النقل السريع للعفش | حور">
-  <meta property="og:description" content="تعرف على كيفية نقل أثاثك في وقت قياسي مع الحفاظ على سلامته - نصائح عملية لنقل سريع وآمن">
+  <meta property="og:title" content="مكتبة المعرفة المتخصصة في النقل | حور">
+  <meta property="og:description" content="مكتبة شاملة من المقالات المتخصصة في نقل الأثاث - اكتشف أحدث التقنيات والاستراتيجيات لنقل متقن وآمن">
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://naqlafsha-hoor.com/article-speed-moving.html">
   <meta property="og:image" content="assets/img/logo.png">
@@ -31,8 +31,8 @@
 
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="أسرار النقل السريع للعفش | حور">
-  <meta name="twitter:description" content="تعرف على كيفية نقل أثاثك في وقت قياسي مع الحفاظ على سلامته - نصائح عملية لنقل سريع وآمن">
+  <meta name="twitter:title" content="مكتبة المعرفة المتخصصة في النقل | حور">
+  <meta name="twitter:description" content="مكتبة شاملة من المقالات المتخصصة في نقل الأثاث - اكتشف أحدث التقنيات والاستراتيجيات لنقل متقن وآمن">
   <meta name="twitter:image" content="assets/img/logo.png">
 
   <!-- Geo and Business Meta Tags (for local SEO) -->
@@ -45,8 +45,8 @@
     {
         "@context": "https://schema.org",
         "@type": "WebPage",
-        "name": "دليل المقالات - حور",
-        "description": "دليل شامل لمقالات نقل العفش - نصائح عملية وأفكار مفيدة لنقل آمن وسريع في الكويت",
+        "name": "مكتبة المعرفة المتخصصة - حور",
+        "description": "مكتبة شاملة من المقالات المتخصصة في نقل الأثاث - تقنيات متطورة واستراتيجيات ذكية لنقل متقن وآمن في الكويت",
         "url": "https://naqlafsha-hoor.com/article-view.html",
         "mainEntity": {
           "@type": "ItemList",
@@ -54,25 +54,25 @@
             {
               "@type": "ListItem",
               "position": 1,
-              "name": "أسرار النقل السريع للعفش",
+              "name": "تقنيات النقل المتطورة والكفؤة",
               "url": "https://naqlafsha-hoor.com/article-speed-moving.html"
             },
             {
               "@type": "ListItem",
               "position": 2,
-              "name": "دليل التغليف الآمن للأثاث",
+              "name": "فن الحماية المتقنة للأثاث",
               "url": "https://naqlafsha-hoor.com/article-packing-guide.html"
             },
             {
               "@type": "ListItem",
               "position": 3,
-              "name": "النقل الموسمي في الكويت",
+              "name": "استراتيجيات النقل الذكية حسب الطقس",
               "url": "https://naqlafsha-hoor.com/article-seasonal-moving.html"
             },
             {
               "@type": "ListItem",
               "position": 4,
-              "name": "نقل المكاتب باحترافية",
+              "name": "إدارة نقل الشركات بذكاء",
               "url": "https://naqlafsha-hoor.com/article-office-moving.html"
             }
           ]
@@ -144,11 +144,11 @@
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
             <!-- <h1 class="article-title">أسرار النقل السريع للعفش</h1> -->
-            <h1  class="article-title">📚 دليل المقالات</h1>
-            <p>اكتشف مجموعة شاملة من المقالات والنصائح المفيدة حول نقل العفش في الكويت</p>
+            <h1  class="article-title">📚 مكتبة المعرفة المتخصصة</h1>
+            <p>استكشف مجموعة متطورة من المقالات المتخصصة والتقنيات الحديثة في نقل الأثاث في الكويت</p>
             <div class="article-meta">
               <span><i class="bi bi-calendar"></i> 15 يونيو 2023</span>
-              <span><i class="bi bi-folder"></i> نصائح النقل</span>
+              <span><i class="bi bi-folder"></i> تقنيات متطورة</span>
             </div>
           </div>
         </div>
@@ -162,14 +162,14 @@
           <div class="col-lg-8 mx-auto">
             <!-- Related Articles -->
             <div class="related-articles">
-              <h3>مقالات النقل</h3>
+              <h3>المقالات المتخصصة</h3>
               <div class="row">
                 <div class="col-md-6">
                   <div class="related-article-card">
                     <img src="assets/img/articles/secure-1.jpg" alt="دليل التغليف الآمن للأثاث - نصائح من خبراء حور">
                     <div class="card-body">
-                      <h4>دليل التغليف الآمن</h4>
-                      <p>أفضل الطرق لتغليف أثاثك وحمايته أثناء النقل</p>
+                      <h4>فن الحماية المتقنة</h4>
+                      <p>تقنيات حديثة لتغليف وحماية أثاثك من التلف</p>
                       <a href="article-packing-guide.html" class="read-more">
                         اقرأ المزيد <i class="bi bi-arrow-left"></i>
                       </a>
@@ -180,8 +180,8 @@
                   <div class="related-article-card">
                     <img src="assets/img/articles/seazon-1.jpg" alt="النقل الموسمي في الكويت - أفضل الأوقات لنقل العفش">
                     <div class="card-body">
-                      <h4>النقل الموسمي</h4>
-                      <p>أفضل الأوقات لنقل عفشك في الكويت</p>
+                      <h4>استراتيجيات النقل الذكية</h4>
+                      <p>خطط ذكية لتجنب التحديات المناخية أثناء نقل الأثاث</p>
                       <a href="article-seasonal-moving.html" class="read-more">
                         اقرأ المزيد <i class="bi bi-arrow-left"></i>
                       </a>
@@ -192,8 +192,8 @@
                   <div class="related-article-card">
                     <img src="assets/img/articles/naql-1.jpg" alt="نقل المكاتب باحترافية - خدمات حور للشركات">
                     <div class="card-body">
-                      <h4>نقل المكاتب باحترافية</h4>
-                      <p>كيف تنقل مكتبك بدون توقف العمل</p>
+                      <h4>إدارة نقل الشركات بذكاء</h4>
+                      <p>استراتيجيات ذكية لنقل مكتبك مع الحفاظ على استمرارية العمل</p>
                       <a href="article-office-moving.html" class="read-more">
                         اقرأ المزيد <i class="bi bi-arrow-left"></i>
                       </a>
@@ -204,8 +204,8 @@
                     <div class="related-article-card">
                       <img src="assets/img/articles/fast-1.jpg" alt="أسرار النقل السريع للعفش - نصائح من حور">
                       <div class="card-body">
-                        <h4>أسرار النقل السريع</h4>
-                        <p>تعرف على أفضل الطرق لنقل عفشك بسرعة وأمان</p>
+                        <h4>تقنيات النقل المتطورة</h4>
+                        <p>اكتشف أحدث الطرق لنقل أثاثك بكفاءة عالية وأمان تام</p>
                         <a href="article-speed-moving.html" class="read-more">
                           اقرأ المزيد <i class="bi bi-arrow-left"></i>
                         </a>
