--- a/article.html
+++ b/article.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>مقالات نقل عفش في الكويت | حور - نقل عفش الكويت</title>
-  <meta name="description" content="مقالات نقل عفش في الكويت - نصائح وتوجيهات شاملة لنقل الأثاث بأسعار منافسة وجودة عالية">
-  <meta name="keywords" content="مقالات نقل عفش في الكويت, نصائح نقل عفش, دليل نقل عفش, معلومات نقل عفش, مقالات حور, نصائح التغليف, دليل النقل السريع, النقل الموسمي, نقل المكاتب, مقالات مفيدة, معلومات مفيدة, نصائح عملية, دليل شامل, مرجع نقل, تعليمات النقل">
+  <title>مركز المعرفة المتخصص في نقل الأثاث | حور - نقل عفش الكويت</title>
+  <meta name="description" content="مركز شامل للمعرفة المتخصصة في نقل الأثاث في الكويت - تقنيات متطورة واستراتيجيات ذكية لنقل متقن وجودة متميزة">
+  <meta name="keywords" content="مركز معرفة نقل الأثاث في الكويت, تقنيات نقل متطورة, دليل نقل متخصص, معلومات نقل متقدمة, مقالات حور المتخصصة, تقنيات الحماية المتطورة, دليل النقل الكفؤ, استراتيجيات النقل الذكية, إدارة نقل الشركات, مقالات متخصصة, معلومات متطورة, تقنيات عملية, دليل شامل متطور, مرجع نقل متقدم, تعليمات نقل متقنة">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -53,8 +53,8 @@
   <!-- ======= Hero Section ======= -->
   <section class="article-header">
     <div class="container">
-      <h1 data-aos="fade-up">خدمات نقل وتغليف متكاملة</h1>
-      <p data-aos="fade-up" data-aos-delay="100">نقل آثاثك بأمان وسرعة مع فريق محترف ومدرب</p>
+      <h1 data-aos="fade-up">خدمات نقل وتغليف متطورة ومتكاملة</h1>
+      <p data-aos="fade-up" data-aos-delay="100">نقل أثاثك بكفاءة عالية وجودة متميزة مع فريق متخصص ومدرب</p>
     </div>
   </section>
 
@@ -62,40 +62,40 @@
   <section id="services" class="services section-bg">
     <div class="container" data-aos="fade-up">
       <div class="section-title">
-        <h2>خدماتنا</h2>
-        <p>نقدم مجموعة متكاملة من خدمات النقل والتغليف</p>
+        <h2>خدماتنا المتطورة</h2>
+        <p>نقدم مجموعة متكاملة ومتطورة من خدمات النقل والتغليف</p>
       </div>
 
       <div class="row">
         <div class="col-md-6 col-lg-3" data-aos="zoom-in" data-aos-delay="100">
           <div class="service-feature">
             <i class="bi bi-box-seam"></i>
-            <h3>فك وتركيب</h3>
-            <p>فك وتركيب الأثاث باحترافية باستخدام أحدث الأدوات</p>
+            <h3>فك وتركيب متطور</h3>
+            <p>فك وتركيب الأثاث بتقنيات متطورة باستخدام أحدث المعدات</p>
           </div>
         </div>
 
         <div class="col-md-6 col-lg-3" data-aos="zoom-in" data-aos-delay="200">
           <div class="service-feature">
             <i class="bi bi-shield-check"></i>
-            <h3>تغليف آمن</h3>
-            <p>تغليف الأثاث بمواد عالية الجودة للحماية الكاملة</p>
+            <h3>حماية متقنة</h3>
+            <p>حماية الأثاث بتقنيات متطورة ومواد عالية الجودة</p>
           </div>
         </div>
 
         <div class="col-md-6 col-lg-3" data-aos="zoom-in" data-aos-delay="300">
           <div class="service-feature">
             <i class="bi bi-truck"></i>
-            <h3>نقل آمن</h3>
-            <p>نقل الأثاث بسيارات مجهزة ومغطاة ضد العوامل الخارجية</p>
+            <h3>نقل متطور</h3>
+            <p>نقل الأثاث بمركبات متطورة ومجهزة بأحدث التقنيات</p>
           </div>
         </div>
 
         <div class="col-md-6 col-lg-3" data-aos="zoom-in" data-aos-delay="400">
           <div class="service-feature">
             <i class="bi bi-heart"></i>
-            <h3>عمل خيري</h3>
-            <p>جزء من أرباحنا يذهب لدعم الجمعيات الخيرية</p>
+            <h3>المسؤولية المجتمعية</h3>
+            <p>جزء من أرباحنا يذهب لدعم المبادرات المجتمعية</p>
           </div>
         </div>
       </div>
@@ -106,8 +106,8 @@
   <section id="articles" class="articles">
     <div class="container" data-aos="fade-up">
       <div class="section-title">
-        <h2>المقالات</h2>
-        <p>أحدث المقالات والنصائح حول نقل وتغليف الأثاث</p>
+        <h2>المقالات المتخصصة</h2>
+        <p>أحدث المقالات المتخصصة والتقنيات المتطورة في نقل وتغليف الأثاث</p>
       </div>
 
       <div class="row">
@@ -116,8 +116,8 @@
           <div class="article-card">
             <img src="assets/img/moving1.jpg" class="article-img" alt="خدمة نقل أثاث احترافية في الكويت - فريق حور المتخصص">
             <div class="article-body">
-              <h3>نقل آثاثك بأمان وسرعة مع فريق محترف</h3>
-              <p>في عالم سريع الخطى، يصبح نقل الآثاث تحديًا كبيرًا للكثيرين. مع خدماتنا المتكاملة، نضمن لك نقلًا آمنًا وسريعًا دون أي خسائر أو تلف. فريقنا المدرب جيدًا يقوم بجميع المراحل بدءًا من الفك والتغليف، مرورًا بالنقل، ووصولًا إلى التركيب في المكان الجديد.</p>
+              <h3>نقل أثاثك بكفاءة عالية وجودة متميزة مع فريق متخصص</h3>
+              <p>في عالم متطور ومتغير، يصبح نقل الأثاث تحدياً يتطلب تقنيات متطورة. مع خدماتنا المتكاملة والمتطورة، نضمن لك نقلاً كفؤاً وجودة متميزة دون أي خسائر أو تلف. فريقنا المتخصص والمدرب يقوم بجميع المراحل بدءاً من الفك والتغليف المتطور، مروراً بالنقل الذكي، ووصولاً إلى التركيب المتقن في المكان الجديد.</p>
               <a href="#" class="btn btn-primary">قراءة المزيد</a>
             </div>
           </div>
@@ -128,8 +128,8 @@
           <div class="article-card">
             <img src="assets/img/packing.jpg" class="article-img" alt="تغليف أثاث آمن ومحترف - مواد عالية الجودة من حور">
             <div class="article-body">
-              <h3>لماذا تختار فريقنا لنقل وتغليف أثاثك؟</h3>
-              <p>يمتلك فريقنا سنوات من الخبرة في مجال نقل وتغليف الآثاث، مما يجعلك في أيدٍ أمينة. نقدم حلولًا شاملة تشمل الفك والتركيب بأدوات متخصصة، تغليف بمواد عالية الجودة، نقل بواسطة سيارات مجهزة، وتركيب في المكان الجديد بدقة واحترافية.</p>
+              <h3>لماذا تختار فريقنا لنقل وتغليف أثاثك المتطور؟</h3>
+              <p>يمتلك فريقنا سنوات من الخبرة المتطورة في مجال نقل وتغليف الأثاث، مما يجعلك في أيدٍ متخصصة وآمنة. نقدم حلولاً شاملة ومتطورة تشمل الفك والتركيب بتقنيات متقدمة، حماية بمواد عالية الجودة، نقل بواسطة مركبات متطورة، وتركيب في المكان الجديد بدقة وإتقان.</p>
               <a href="#" class="btn btn-primary">قراءة المزيد</a>
             </div>
           </div>
@@ -140,8 +140,8 @@
           <div class="article-card">
             <img src="assets/img/furniture-care.jpg" class="article-img" alt="حماية الأثاث أثناء النقل - نصائح من خبراء حور">
             <div class="article-body">
-              <h3>كيف تحافظ على أثاثك أثناء النقل؟</h3>
-              <p>النقل الآمن للآثاث يتطلب أكثر من مجرد وضع القطع في سيارة. إليك بعض النصائح من خبرائنا: الفك الصحيح باستخدام الأدوات المناسبة، التغليف الجيد باستخدام الفقاعات والورق المقوى، والتخزين المؤقت بوضع القطع الثقيلة في الأسفل والخفيفة في الأعلى.</p>
+              <h3>كيف تحافظ على أثاثك أثناء النقل المتطور؟</h3>
+              <p>النقل المتقن للأثاث يتطلب أكثر من مجرد وضع القطع في مركبة. إليك بعض التقنيات من خبرائنا: الفك المتطور باستخدام المعدات المتخصصة، الحماية المتقدمة باستخدام تقنيات العزل المتطورة، والتخزين الذكي بوضع القطع الثقيلة في الأسفل والخفيفة في الأعلى مع نظام تثبيت متقدم.</p>
               <a href="#" class="btn btn-primary">قراءة المزيد</a>
             </div>
           </div>
@@ -156,8 +156,8 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="section-title text-center">
-            <h2>مقالات أخرى مفيدة</h2>
-            <p>اكتشف المزيد من النصائح والخبرات في نقل العفش</p>
+            <h2>مقالات متخصصة أخرى</h2>
+            <p>استكشف المزيد من التقنيات والخبرات المتطورة في نقل الأثاث</p>
           </div>
         </div>
       </div>
@@ -167,8 +167,8 @@
           <div class="article-card">
             <img src="assets/img/articles/fast-2.jpg" alt="أسرار النقل السريع للعفش - نصائح من حور" class="img-fluid">
             <div class="article-content">
-              <h4>أسرار النقل السريع</h4>
-              <p>تعرف على كيفية نقل أثاثك في وقت قياسي مع الحفاظ على سلامته</p>
+              <h4>تقنيات النقل المتطورة</h4>
+              <p>اكتشف كيفية نقل أثاثك بكفاءة عالية مع الحفاظ على جودته</p>
               <a href="article-speed-moving.html" class="btn btn-outline-primary">اقرأ المزيد</a>
             </div>
           </div>
@@ -178,8 +178,8 @@
           <div class="article-card">
             <img src="assets/img/articles/secure-1.jpg" alt="دليل التغليف الآمن للأثاث - نصائح من خبراء حور" class="img-fluid">
             <div class="article-content">
-              <h4>دليل التغليف الآمن</h4>
-              <p>أفضل الطرق لتغليف مختلف أنواع الأثاث والأجهزة الكهربائية</p>
+              <h4>فن الحماية المتقنة</h4>
+              <p>تقنيات متطورة لحماية مختلف أنواع الأثاث والأجهزة الكهربائية</p>
               <a href="article-packing-guide.html" class="btn btn-outline-primary">اقرأ المزيد</a>
             </div>
           </div>
@@ -189,8 +189,8 @@
           <div class="article-card">
             <img src="assets/img/articles/seazon-1.jpg" alt="النقل الموسمي في الكويت - أفضل الأوقات لنقل العفش" class="img-fluid">
             <div class="article-content">
-              <h4>النقل الموسمي</h4>
-              <p>توقيتات مثالية لتجنب الحرارة والازدحام أثناء نقل الأثاث</p>
+              <h4>استراتيجيات النقل الذكية</h4>
+              <p>خطط ذكية لتجنب التحديات المناخية أثناء نقل الأثاث</p>
               <a href="article-seasonal-moving.html" class="btn btn-outline-primary">اقرأ المزيد</a>
             </div>
           </div>
@@ -200,8 +200,8 @@
           <div class="article-card">
             <img src="assets/img/articles/naql-1.jpg" alt="نقل المكاتب باحترافية - خدمات حور للشركات" class="img-fluid">
             <div class="article-content">
-              <h4>نقل المكاتب</h4>
-              <p>كيف تنقل مكتبك بدون توقف العمل وخسارة الزبائن</p>
+              <h4>إدارة نقل الشركات</h4>
+              <p>استراتيجيات ذكية لنقل مكتبك مع الحفاظ على استمرارية العمل</p>
               <a href="article-office-moving.html" class="btn btn-outline-primary">اقرأ المزيد</a>
             </div>
           </div>
@@ -212,8 +212,8 @@
       <div class="row mt-5">
         <div class="col-lg-12">
           <div class="section-title text-center">
-            <h3>خدماتنا المتخصصة</h3>
-            <p>اكتشف خدماتنا المتكاملة في نقل العفش</p>
+            <h3>خدماتنا المتطورة والمتخصصة</h3>
+            <p>استكشف خدماتنا المتكاملة والمتطورة في نقل الأثاث</p>
           </div>
         </div>
       </div>
@@ -225,8 +225,8 @@
               <img src="assets/img/hoors/img/video-1-cover.png" alt="تغليف أثاث فاخر بأعلى جودة - خدمات حور" class="img-fluid">
             </div>
             <div class="service-content">
-              <h3>تغليف عالي الجودة</h3>
-              <p>خدمة تغليف الأثاث بأعلى جودة مع مواد متينة</p>
+              <h3>حماية متطورة عالية الجودة</h3>
+              <p>خدمة حماية الأثاث بتقنيات متطورة ومواد متينة</p>
               <a href="portfolio-house1.html" class="btn btn-primary">عرض التفاصيل</a>
             </div>
           </div>
@@ -238,8 +238,8 @@
               <img src="assets/img/hoors/img/video-2-cover.png" alt="فك وتركيب أثاث باحترافية - خبراء حور" class="img-fluid">
             </div>
             <div class="service-content">
-              <h3>فك وتركيب احترافي</h3>
-              <p>فك وتركيب الأثاث بأدوات خاصة وخبرة عالية</p>
+              <h3>فك وتركيب متطور ومتخصص</h3>
+              <p>فك وتركيب الأثاث بتقنيات متطورة وخبرة متخصصة</p>
               <a href="portfolio-office1.html" class="btn btn-primary">عرض التفاصيل</a>
             </div>
           </div>
@@ -251,8 +251,8 @@
               <img src="assets/img/hoors/img/video-3-cover.png" alt="سيارات نقل عفش مبطنة ومجهزة - حور" class="img-fluid">
             </div>
             <div class="service-content">
-              <h3>سيارات مجهزة</h3>
-              <p>سيارات نقل مبطنة ومجهزة خصيصاً لنقل العفش</p>
+              <h3>مركبات متطورة ومجهزة</h3>
+              <p>مركبات نقل متطورة ومجهزة خصيصاً لنقل الأثاث</p>
               <a href="portfolio-appliances1.html" class="btn btn-primary">عرض التفاصيل</a>
             </div>
           </div>
@@ -265,15 +265,15 @@
   <section id="contact" class="contact section-bg">
     <div class="container" data-aos="fade-up">
       <div class="section-title">
-        <h2>اتصل بنا</h2>
-        <p>تواصل معنا اليوم واحصل على أفضل خدمات النقل</p>
+        <h2>تواصل معنا</h2>
+        <p>تواصل معنا اليوم واحصل على أفضل خدمات النقل المتطورة</p>
       </div>
 
       <div class="row justify-content-center">
         <div class="col-lg-8">
           <div class="contact-box">
-            <h3>نحن جاهزون لخدمتك</h3>
-            <p>اتصل بنا الآن واحصل على استشارة مجانية</p>
+            <h3>نحن جاهزون لخدمتك المتطورة</h3>
+            <p>اتصل بنا الآن واحصل على استشارة متخصصة مجانية</p>
             <div class="contact-number">
               <i class="bi bi-phone"></i> 66401171
             </div>
